Titulo del archivo, primer h1 y h2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ciudad de Barranquilla</title>
 </head>
 <body>
+    <h1>Barranquilla</h1>
+    
+    <h2>Ubicación</h2>
+    <p>Barranquilla es una ciudad ubicada en el norte de Colombia, a orillas del río Magdalena y cerca del Mar Caribe.</p>
     
 </body>
 </html>
