Agregué un h2 y el parrafo para definir el desarrollador

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     
     <h2>Ubicación</h2>
     <p>Barranquilla es una ciudad ubicada en el norte de Colombia, a orillas del río Magdalena y cerca del Mar Caribe.</p>
+
+    <h2>Turismo</h2>
+    <p>Barranquilla es conocida por su vibrante cultura, festivales y playas. Algunos lugares de interés incluyen el Museo del Caribe, el Malecón de la ciudad y el Parque Metropolitano.</p>
+
+    <h2>Deportes</h2>
+    <p>El béisbol y el fútbol son los deportes más populares en Barranquilla. La ciudad cuenta con equipos locales en ambas disciplinas que participan en ligas nacionales.</p>
     
 </body>
 </html>
