Llené los datos del desarrollador

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <h2>Deportes</h2>
     <p>El béisbol y el fútbol son los deportes más populares en Barranquilla. La ciudad cuenta con equipos locales en ambas disciplinas que participan en ligas nacionales.</p>
     
+    <h2>Datos del Desarrollador</h2>
+    <p>Desarrollado por:<br>
+        
 </body>
 </html>
